feat: Implement chat request feature with acceptance and rejection flow
- Added ChatRequest entity and repository for managing chat requests.
- Created ChatRequestController to handle incoming and outgoing chat requests.
- Implemented ChatRequestService for business logic related to chat requests.
- Introduced ChatRequestStatus enum to represent the status of chat requests.
- Enhanced FriendService to handle chat requests when accepting friendships.
- Updated ConversationService to manage private conversations based on chat requests.
- Added DTOs for chat request creation and response handling.
- Integrated chat request notifications for users.
- Modified Message and MessageService to support sharing messages across conversations.
- Updated ConversationResponse to include message sending permissions based on friendship status and chat requests.